--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node app"
   },
   "dependencies": {
+    "@types/passport-jwt": "^3.0.10",
     "bcryptjs": "2.4.3",
     "body-parser": "1.20.2",
     "cors": "2.8.5",
